@@ -12,12 +12,12 @@
 
 
 
-*{
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -o-box-sizing:border-box;
-  box-sizing: border-box;
-}
+/**{*/
+  /*-webkit-box-sizing: border-box;*/
+  /*-moz-box-sizing: border-box;*/
+  /*-o-box-sizing:border-box;*/
+  /*box-sizing: border-box;*/
+/*}*/
 
   /*
   -------------------------------------------------------
